--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#Home">Home</a>
         <a href="#Shop">Shop</a>
         <a href="#About">About</a>
-        <a href="#Blogs">Blogs</a>
+        <a href="#Blogs">Article</a>
         <a href="#Contact">Contact</a>
     </nav>
 </header>
@@ -22,7 +22,7 @@
 
 <div>
     <img src="images/logo.png"><br/><br/><hr/><br/><br/>
-    <a href="articles/VegetableOilArticle.html">Vegatable Oil Article</a>
+    <a href="articles/VegetableOilArticle.html">Vegatable Oil</a>
     
 </div>
 
