--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>style1</title>
+    <title>Lezzat Website</title>
     <link rel="stylesheet" href="refer.css">
 </head>
 <body>
