--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#Home">Home</a>
         <a href="#Shop">Shop</a>
         <a href="#About">About</a>
-        <a href="#Blogs">Article</a>
+        <a href="articles.html">Articles</a>
         <a href="#Contact">Contact</a>
     </nav>
 </header>
